# type_list

./: .clang-format  .gitattributes  .gitignore  .runsettings  LICENSE  README.md  meson.build  meson_options.txt  type_list.h  type_list.props  type_list.sln  type_list.vcxproj  type_list.vcxproj.filters
.github/workflows/: ci.yaml
examples/: comparison_adapter_std_tuple.h  comparison_adapter_std_tuple.hpp  comparison_adapter_type_list.h  comparison_adapter_type_list.hpp  comparison_adapters.h  comparison_adapters.hpp  comparison_main.cpp  comparison_std_tuple.vcxproj  comparison_type_list.vcxproj  comparison_with_std_tuple.cpp  comparison_with_std_tuple.vcxproj  meson.build
include/: meson.build
include/mz/: type_list.h  type_list.hpp  type_list.hpp.in
tests/: main.cpp  meson.build
